--- a/index.html
+++ b/index.html
@@ -163,70 +163,76 @@
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="paragraph">Product Designer</p>
                 <ul class="card-list-soc list">
-                  <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-instagram"></use>
                       </svg>
-                    </li>
                     </a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  </li>
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-twitter"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
-                      <svg class="card-list-icon">
-                        <use href="./images/icons.svg#logo-facebook"></use>
-                      </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                        <li class="card-list-soc-item">
-                          <svg class="card-list-icon">
-                            <use href="./images/icons.svg#logo-linkedin"></use>
-                          </svg>
-                        </li>
-                      </a>
-                    </ul>
-                  </div>
-                </li>
-                <li class="card-studio-sect-three">
-                   <img
-                src="./images/tom-ford.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"/>
-                <div class="content-studio-sect-three">
-                  <h3 class="title">Tom Ford</h3>
-                  <p class="paragraph">Frontend Developer</p>
-                  <ul class="card-list-soc list">
-                    <a href="" class="card-link-soc">
-                      <li class="card-list-soc-item">
-                        <svg class="card-list-icon">
-                          <use href="./images/icons.svg#logo-instagram"></use>
-                        </svg>
-                      </li>
                     </a>
+                  </li>
+                  <li class="card-list-soc-item">
                     <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
-                      <svg class="card-list-icon">
-                        <use href="./images/icons.svg#logo-twitter"></use>
-                      </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-facebook"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                    </a>
+                  </li>
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-linkedin"></use>
                       </svg>
-                    </li></a>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="card-studio-sect-three">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="content-studio-sect-three">
+                <h3 class="title">Tom Ford</h3>
+                <p class="paragraph">Frontend Developer</p>
+                <ul class="card-list-soc list">
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -242,31 +248,37 @@
                 <h3 class="title">Camila Garcia</h3>
                 <p class="paragraph">Marketing</p>
                 <ul class="card-list-soc list">
-                  <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-instagram"></use>
                       </svg>
-                    </li>
                     </a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-twitter"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                    </a>
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-facebook"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                    </a>
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-linkedin"></use>
                       </svg>
-                    </li></a>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -281,31 +293,37 @@
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="paragraph">UI Designer</p>
                 <ul class="card-list-soc list">
-                  <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-instagram"></use>
                       </svg>
-                    </li>
                     </a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-twitter"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                    </a>
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-facebook"></use>
                       </svg>
-                    </li></a>
-                      <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
+                    </a>
+                  </li>
+
+                  <li class="card-list-soc-item">
+                    <a href="" class="card-link-soc">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-linkedin"></use>
                       </svg>
-                    </li></a>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -314,86 +332,98 @@
       </section>
       <section class="customers section">
         <div class="container">
-        <h2 class="sect-title">Customers</h2>
-        <ul class="customers-list list">
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-1"></use>
-            </svg>
-          </li>
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-2"></use>
-            </svg>
-          </li>
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-3"></use>
-            </svg>
-          </li>
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-4"></use>
-            </svg>
-          </li class="customers-item">
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-5"></use>
-            </svg>
-          </li class="customers-item">
-          <li class="customers-item">
-            <svg class="customers-svg">
-              <use href="./images/icons.svg#client-logo-6"></use>
-            </svg>
-          </li>
-        </ul>
+          <h2 class="sect-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link link">
+                <svg class="customers-svg">
+                  <use href="./images/icons.svg#client-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="footer-container container">
         <div class="footer-content">
-        <a class="logo-link link" href="./index.html"
-          >Web<span class="logo-link-footer">Studio</span></a
-        >
-        <p class="footer-content-paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-contacts">
-        <p class="footer-contacts-paragraph">Social media</p>
-        <ul class="footer-list list">
-          <a href="" class="footer-link link">
+          <a class="logo-link link" href="./index.html"
+            >Web<span class="logo-link-footer">Studio</span></a
+          >
+          <p class="footer-content-paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-contacts">
+          <p class="footer-contacts-paragraph">Social media</p>
+          <ul class="footer-list list">
             <li class="footer-contacts-item">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#logo-instagram"></use>
-              </svg>
+              <a href="" class="footer-link link">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-instagram"></use>
+                </svg>
+              </a>
             </li>
-          </a>
-          <a href="" class="footer-link link">
             <li class="footer-contacts-item">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#logo-twitter"></use>
-              </svg>
+              <a href="" class="footer-link link">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-twitter"></use>
+                </svg>
+              </a>
             </li>
-          </a>
-          <a href="" class="footer-link link">
             <li class="footer-contacts-item">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#logo-facebook"></use>
-              </svg>
+              <a href="" class="footer-link link">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-facebook"></use>
+                </svg>
+              </a>
             </li>
-          </a>
-          <a href="" class="footer-link link">
             <li class="footer-contacts-item">
-              <svg class="footer-icon">
-                <use href="./images/icons.svg#logo-linkedin"></use>
-              </svg>
+              <a href="" class="footer-link link">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-linkedin"></use>
+                </svg>
+              </a>
             </li>
-          </a>
-        </ul>
-      </div>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
