--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,9 @@
               >
             </li>
             <li class="address-menu-item">
-              <a class="address-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="address-menu-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -77,7 +79,12 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/app-banking.jpg" alt="app banking" width="360" height="300" />
+                <img
+                  src="./images/app-banking.jpg"
+                  alt="app banking"
+                  width="360"
+                  height="300"
+                />
                 <div class="portfolio-item-content">
                   <h2 class="title">Banking App Interface Concept</h2>
                   <p class="paragraph">App</p>
@@ -191,7 +198,12 @@
 
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/website-coffee.jpg" alt="coffee" width="360" height="300" />
+                <img
+                  src="./images/website-coffee.jpg"
+                  alt="coffee"
+                  width="360"
+                  height="300"
+                />
                 <div class="portfolio-item-content">
                   <h2 class="title">Fresh Coffee</h2>
                   <p class="paragraph">Web Site</p>
@@ -209,41 +221,41 @@
             >Web<span class="logo-link-footer">Studio</span></a
           >
           <p class="footer-content-paragraph">
-            Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
           </p>
         </div>
         <div class="footer-contacts">
           <p class="footer-contacts-paragraph">Social media</p>
           <ul class="footer-list list">
-            <a href="" class="footer-link link">
-              <li class="footer-contacts-item">
+            <li class="footer-contacts-item">
+              <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-instagram"></use>
                 </svg>
-              </li>
-            </a>
-            <a href="" class="footer-link link">
-              <li class="footer-contacts-item">
+              </a>
+            </li>
+            <li class="footer-contacts-item">
+              <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-twitter"></use>
                 </svg>
-              </li>
-            </a>
-            <a href="" class="footer-link link">
-              <li class="footer-contacts-item">
+              </a>
+            </li>
+            <li class="footer-contacts-item">
+              <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-facebook"></use>
                 </svg>
-              </li>
-            </a>
-            <a href="" class="footer-link link">
-              <li class="footer-contacts-item">
+              </a>
+            </li>
+            <li class="footer-contacts-item">
+              <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-linkedin"></use>
                 </svg>
-              </li>
-            </a>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
