--- a/portfolio.html
+++ b/portfolio.html
@@ -21,45 +21,41 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header class="page-header">
-      <div class="container main-menu">
+    <header class="header-page">
+      <div class="main-menu-container container">
         <nav class="nav-menu">
           <a class="logo-link link" href="./index.html"
             >Web<span class="logo-link-header">Studio</span></a
           >
-          <ul class="menu list">
-            <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+          <ul class="nav-menu-list list">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./index.html">Studio</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-link link" href="">Contacts</a>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address>
-          <ul class="address-menu list">
-            <li class="address-menu-item">
-              <a class="address-menu-link link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+        <address class="address-menu">
+          <ul class="address-list list">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="address-menu-item">
-              <a class="address-menu-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
       </div>
     </header>
     <main>
-      <section class="portfolio-section">
+      <section class="portfolio-section section">
         <div class="container">
-          <h1 hidden>text</h1>
-          <ul class="portfolio-btn-menu list">
+          <h1 hidden>Gallery</h1>
+          <ul class="portfolio-btn-list list">
             <li class="portfolio-btn-item">
               <button class="portfolio-btn" type="button">All</button>
             </li>
@@ -78,135 +74,130 @@
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/app-banking.jpg"
+                  src="./images/glr-app-banking.jpg"
                   alt="app banking"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Banking App Interface Concept</h2>
-                  <p class="paragraph">App</p>
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/marketing-cashless.jpg"
+                  src="./images/glr-marketing-cashless.jpg"
                   alt="marketing cashless"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Cashless Payment</h2>
-                  <p class="paragraph">Marketing</p>
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/app-meditaion.jpg"
+                  src="./images/glr-app-meditaion.jpg"
                   alt="app meditaion"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Meditation App</h2>
-                  <p class="paragraph">App</p>
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="text">App</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/marketing-taxi.jpg"
+                  src="./images/glr-marketing-taxi.jpg"
                   alt="marketing taxi"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Taxi Service</h2>
-                  <p class="paragraph">Marketing</p>
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/design-screen.jpg"
+                  src="./images/glr-design-screen.jpg"
                   alt="design screen"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Screen Illustrations</h2>
-                  <p class="paragraph">Design</p>
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/marketing-courses.jpg"
+                  src="./images/glr-marketing-courses.jpg"
                   alt="marketing courses"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Online Courses</h2>
-                  <p class="paragraph">Marketing</p>
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/design-instagram.jpg"
+                  src="./images/glr-design-instagram.jpg"
                   alt="design instagram"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Instagram Stories Concept</h2>
-                  <p class="paragraph">Design</p>
+                  <h2 class="subtitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
+              <a href="" class="portfolio-link link">
                 <img
-                  src="./images/website-organicfood.jpg"
+                  src="./images/glr-website-organicfood.jpg"
                   alt="organic food"
                   width="360"
                   height="300"
                 />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Organic Food</h2>
-                  <p class="paragraph">Web Site</p>
+                  <h2 class="subtitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
                 </div>
               </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link">
-                <img
-                  src="./images/website-coffee.jpg"
-                  alt="coffee"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="portfolio-link link">
+                <img src="./images/glr-website-coffee.jpg" alt="coffee" width="360" height="300" />
                 <div class="portfolio-item-content">
-                  <h2 class="title">Fresh Coffee</h2>
-                  <p class="paragraph">Web Site</p>
+                  <h2 class="subtitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
                 </div>
               </a>
             </li>
@@ -214,42 +205,42 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="footer-page">
       <div class="footer-container container">
         <div class="footer-content">
           <a class="logo-link link" href="./index.html"
             >Web<span class="logo-link-footer">Studio</span></a
           >
-          <p class="footer-content-paragraph">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
           </p>
         </div>
         <div class="footer-contacts">
-          <p class="footer-contacts-paragraph">Social media</p>
+          <p class="footer-title">Social media</p>
           <ul class="footer-list list">
-            <li class="footer-contacts-item">
+            <li class="footer-item">
               <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-contacts-item">
+            <li class="footer-item">
               <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-contacts-item">
+            <li class="footer-item">
               <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-contacts-item">
+            <li class="footer-item">
               <a href="" class="footer-link link">
                 <svg class="footer-icon">
                   <use href="./images/icons.svg#logo-linkedin"></use>
